# Note: keep this file in wiki format for easy pasting to the proto-ch wiki
# Note: keep milestone bullets in ticket numerical order for easier
#       reconciliation at release time

= GENI Portal Release Notes =

== 2.21 ==
 * When sending email, set charset to utf8 and transfer encoding to 8bit,
   so that international characters are preserved correctly. (#1162)

== 2.20 ==
 * Require unique name for rspecs (#784)
 * Poll slice aggregates by default (#1147)
 * Update to use Omni 2.7 (support any bound multi-am request,
   clicking 'Ready' updates the AM list for 'This Slice'). (#1163)
  * Set `useslicemembers=False` in the `omni_config`.
 * Default browser named to 'Unknown' to avoid undefined var error. (#1166)
 * Send the user's iRODS username to the WiMAX server when
   creating an account, if available. (#1167)
 * Rename WiMAX as Wireless. (#1168)
 * Bug report sending fixes: (#1169)
  * Fix spacing so mail readers see the attachment.
  * Allow comma or semi-colon separated list of to addresses.
 * Avoid polling all aggregates by default (#1171)

== 2.19 ==
 * Allow parallel AJAX deletes and renews (#998)
 * Use portal styling for OpenID trust page (#1007)
 * Add privilege check when requesting to view private RSpecs (#1054)
 * Comments and clearer logs when DB inconsistency gives WiMAX errors (#1058)
 * Support unicode/international strings in portal (#1069)
 * Add comments about new error messages in WiMAX (#1077)
  * Handle error 20 (group exists) by treating attempt to create
    the group as successful and adding the user to the group
    if needed.
 * Add a button for launching jFed on the Home, Slices and Slice pages. (#1092)
  * Suppress error log when user running Chrome on Mac. (#1156)
 * Update to new WiMAX method signatures, error messages (#1093)
 * WiMAX user and group names now start with "geni-". (#1094)
  * Added new project attribute for the `wimax_group_name`.
  * If project/group leads differ and new lead