@@ -7,6 +7,7 @@
 == 2.21 ==
  * When sending email, set charset to utf8 and transfer encoding to 8bit,
    so that international characters are preserved correctly. (#1162)
+ * Extract sliver expiration at FOAM (so OESS), SFA, and GRAM AMs. (#1173)
 
 == 2.20 ==
  * Require unique name for rspecs (#784)
